--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<div id="wrap" class="boxed ">
+<div id="wrap"
+    class="boxed ">
     <div class="grey-dark-bg">
         <app-navbar></app-navbar>
     </div>
-        <router-outlet></router-outlet>
-   
+    <router-outlet></router-outlet>
+
+    <app-footer></app-footer>
+
 </div>
