--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,25 +1,18 @@
-<!-- FOOTER 1 -->
 <footer id="footer1" class="page-section text-center pt-100-b-80-cont">
     <div class="container">
-
-        <!-- Social Links -->
         <div class="footer-soc-a">
-            <a href="http://themeforest.net/user/abcgomel/portfolio?ref=abcgomel" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="http://themeforest.net/user/abcgomel/portfolio?ref=abcgomel" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="http://themeforest.net/user/abcgomel/portfolio?ref=abcgomel" title="Behance" target="_blank"><i class="fa fa-behance"></i></a>
-            <a href="http://themeforest.net/user/abcgomel/portfolio?ref=abcgomel" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
-            <a href="http://themeforest.net/user/abcgomel/portfolio?ref=abcgomel" title="Dribbble" target="_blank"><i class="fa fa-dribbble"></i></a>
+            <a href="javascript:void(0)" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="javascript:void(0)" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+            <a href="javascript:void(0)" title="Behance" target="_blank"><i class="fa fa-behance"></i></a>
+            <a href="javascript:void(0)" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="javascript:void(0)" title="Dribbble" target="_blank"><i class="fa fa-dribbble"></i></a>
         </div>
-
-        <!-- Copyright -->
         <div class="footer-copy">
-            <a href="http://themeforest.net/user/abcgomel/portfolio" target="_blank">&copy; HASWELL 2017</a>
+            <a href="javascript:void(0)" target="_blank">&copy; DEVSINSIGHT 2018</a>
         </div>
-
     </div>
 </footer>
 
-<!-- BACK TO TOP -->
-<p id="back-top">
-    <a href="#top" title="Back to Top"><span class="icon icon-arrows-up"></span></a>
+<p id="back-top" #footer [@fade]="stateExpression">
+    <a href="javascript:void(0)" title="Back to Top"><span class="icon icon-arrows-up" (click)="backToTop()"></span></a>
 </p>
